--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/theme-classic": "^2.0.1",
+    "@docusaurus/theme-common": "^2.0.1",
+    "@docusaurus/types": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "d": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
