--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@docusaurus/theme-common": "^2.0.1",
     "@docusaurus/types": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
+    "@types/node": "^18.7.8",
+    "@types/react": "^18.0.17",
     "clsx": "^1.2.1",
     "d": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
