--- a/.github/worflows/deploy.yml
+++ b/.github/worflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
+  merge:
     branches:
       - main
     # Review gh actions docs if you want to further define triggers, paths, etc
