--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  merge:
+  push:
     branches:
       - main
     # Review gh actions docs if you want to further define triggers, paths, etc
