--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,22 +12,16 @@ jobs:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: pnpm/action-setup@v2.2.2
-        with:
-          version: 6.0.2
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
+      - uses: actions/checkout@v2  
       - uses: actions/setup-node@v3
         with:
           node-version: 16.14.2
-          cache: pnpm
+          cache: npm
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install --frozen-lockfile
       - name: Build website
-        run: pnpm build
+        run: npm build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
